# enrichr-rs

./: Cargo.toml  README.md  errorhandling.md  usage.md
enrichr-derive/: Cargo.toml
enrichr-derive/src/: lib.rs
examples/: basic_usage.rs  complex_transformations.rs
src/: enrichable.rs  error.rs  jsonpath.rs  lib.rs  traits.rs  types.rs
src/transform/: array.rs  mod.rs  string.rs  template.rs
tests/: basic_tests.rs  complex_types.rs  error_cases.rs  integration.rs
